--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
 <body>
     <main>
         <section class="section-one">
-            <img src="img/logo.svg" alt="logo">
-            <h1>A history of everything you copy</h1>
-            <p>
-                Clipboard allows you to track and organize everything you 
-                copy. Instantly access your clipboard on all your devices.
-            </p>
-            <input type="button" value="Download for iOS">
-            <input type="button" value="Download for Mac">
+            <div>
+                <img src="img/logo.svg" alt="logo">
+            </div>
+            <div>
+                <h1>A history of everything you copy</h1>
+                <p>
+                    Clipboard allows you to track and organize everything you 
+                    copy. Instantly access your clipboard on all your devices.
+                </p>
+                <div>
+                    <input type="button" value="Download for iOS" class="ios">
+                    <input type="button" value="Download for Mac" class="mac">
+                </div>
+            </div>
         </section>
         <section class="section-two">
             <div>
@@ -34,7 +40,7 @@
             </div>
             <div>
                 <img src="img/image-computer.png" alt="image-computer">
-                <div>
+                <div class="section-two-info">
                     <div>
                         <h1>Quick Search</h1>
                         <p>
@@ -114,8 +120,8 @@
                 Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
                 and you’re ready to start adding to your clipboard.
             </p>
-            <input type="button" value="Download for iOS">
-            <input type="button" value="Download for Mac">
+            <input type="button" value="Download for iOS" class="ios">
+            <input type="button" value="Download for Mac" class="mac">
         </section>
     </main>
     <footer>
