--- a/index.html
+++ b/index.html
@@ -77,40 +77,40 @@
             </div>
         </section>
         <section class="section-four">
-            <div>
+            <div class="icon-with-info">
                 <img src="img/icon-blacklist.svg" alt="icon-blacklist">
                 <h1>Create blacklists</h1>
                 <p>
                     Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
                 </p>
             </div>
-            <div>
+            <div class="icon-with-info">
                 <img src="img/icon-text.svg" alt="icon-text">
                 <h1>Plain text snippets</h1>
                 <p>
                     Remove unwanted formatting from copied text for a consistent look.
                 </p>
             </div>
-            <div>
+            <div class="icon-with-info">
                 <img src="img/icon-preview.svg" alt="icon-preview">
                 <h1>Sneak preview</h1>
                 <p>
                     Quick preview of all snippets on your Clipboard for easy access.
                 </p>
             </div>
-            <div>
+            <div class="icon-without-info">
                 <img src="img/logo-google.png" alt="logo-google">
             </div>
-            <div>
+            <div class="icon-without-info">
                 <img src="img/logo-ibm.png" alt="logo-ibm">
             </div>
-            <div>
+            <div class="icon-without-info">
                 <img src="img/logo-microsoft.png" alt="logo-microsoft">
             </div>
-            <div>
+            <div class="icon-without-info">
                 <img src="img/logo-hp.png" alt="logo-hp">
             </div>
-            <div>
+            <div class="icon-without-info">
                 <img src="img/logo-vector-graphics.png" alt="logo-vector-graphics">
             </div>
         </section>
@@ -120,8 +120,10 @@
                 Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
                 and you’re ready to start adding to your clipboard.
             </p>
-            <input type="button" value="Download for iOS" class="ios">
-            <input type="button" value="Download for Mac" class="mac">
+            <div>
+                <input type="button" value="Download for iOS" class="ios">
+                <input type="button" value="Download for Mac" class="mac">
+            </div>
         </section>
     </main>
     <footer>
@@ -139,7 +141,7 @@
         <ul>
             <li>Install Guide</li>
         </ul>
-        <ul>
+        <ul class="social">
             <li>
                 <img src="img/icon-facebook.svg" alt="icon-facebook">
             </li>
