--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     Clipboard allows you to track and organize everything you 
                     copy. Instantly access your clipboard on all your devices.
                 </p>
-                <div>
+                <div class="input-div">
                     <input type="button" value="Download for iOS" class="ios">
                     <input type="button" value="Download for Mac" class="mac">
                 </div>
@@ -120,7 +120,7 @@
                 Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
                 and you’re ready to start adding to your clipboard.
             </p>
-            <div>
+            <div class="input-div">
                 <input type="button" value="Download for iOS" class="ios">
                 <input type="button" value="Download for Mac" class="mac">
             </div>
